styles/place.css
body {
    font-family: "Roboto", sans-serif;
    display: grid;
    height: 100vh;
    grid-template: auto minmax(0, 1fr) auto / 1fr;
    margin: 0px;
}

header {
    background: white;
}

header h1 {
    text-align: center;
}

main {
    background: white;
    grid-template: auto 1fr auto / auto 1fr auto;
    overflow: scroll;
}

.hero {
    grid-area: 1 / 1 / 4 / 4;
}

.hero img {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.card {
    background: white;
    opacity: .9;
    margin: 2em;
    padding: 0em 1em 1em 1em;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

.data {
    grid-area: 1 / 1 / 1 / 1;
}

td {
    white-space: nowrap;
}

td.key {
    font-weight: bold;
    text-align: right;
}

td.value {
    text-align: left;
}

.weather {
    grid-area: 3 / 3 / 4 / 4;
} 

.weather h2::after{
    content: url("/images/partly-cloudy.svg");
    display: inline-block;
    width: 1.5em;
    height: 1.5em;
    vertical-align: text-bottom;
}

footer {
    background: white;
    padding: 1rem;
    text-align: center;
}

footer #currentyear {
    margin: 0px 4px 0px 4px;
}

